# graft

./: .gitignore  Cargo.toml  README.md  package.json  post-install.js
.github/workflows/: rust.yml
examples/app/: .env  .gitignore  .graft.yml  fragments.graphql  package.json  queries.graphql
src/: config.rs  introspection_response.rs  main.rs  transform.rs  util.rs
