[package]
name = "graphql-2-ts"
version = "0.1.0"
edition = "2021"
description = "Generate Typescript according to a GraphQL schema."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.2", features = ["yaml"], default-features = false }
convert_case = "0.6.0"
eyre = "0.6.8"
graphql-parser = "0.4.0"
graphql_client = { version = "0.11.0", features = ["reqwest"] }
reqwest = "0.11.12"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["tokio-macros", "macros", "rt-multi-thread"] }
url = { version = "2.3.1", features = ["serde"] }
